# meteor_radio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  meteorRadioMainWindow.cpp  meteorRadioMainWindow.h  meteor_radio_main_window.ui
figures/: meteor_2.gnu  meteor_3.gnu  meteor_classes_station.dia
schema/: db_meteor.dbm  getstationdistance.sql  getstationrandom.sql  meteor.sql  meteor_ext.sh  meteor_map.json  meteor_radio_station.sql  meteor_rand_ext.sql  meteor_stations_map.geojson  random_numbers.sql  update_meteor_0_1.sql
schema/dumps/: meteor_stations.sql
schema/libgeneration/: aclocal.m4  configure.ac
schema/libgeneration/src/: rand.cpp  rand.h
schema/librandgeneration/: configure.ac
schema/librandgeneration/src/: Makefile.am  rand.c  rand.cpp  rand.h  random_config.h
schema/messages/: clearmess.sql  insertmessage.sql
src/: CMakeLists.txt  meteorLoader.cpp  meteorLoader.h  meteorRadioController.cpp  meteorRadioController.h  meteorRadioSingleton.cpp  meteorRadioSingleton.h  meteorRadioStationsFactory.cpp  meteorRadioStationsFactory.h  meteorRadioWorker.cpp  meteorRadioWorker.h  meteorTraceController.cpp  meteorTraceController.h  meteorTraceGenerationFactory.cpp  meteorTraceGenerationFactory.h  meteorTraceWorker.cpp  meteorTraceWorker.h  meteorWriter.cpp  meteorWriter.h  meteor_constants.h  meteor_radio_singleton.cpp  meteor_radio_singleton.h
src/gui/: CMakeLists.txt  meteorDelegate.cpp  meteorDelegate.h  meteorRadioStationsModel.cpp  meteorRadioStationsModel.h  randomParametersModel.cpp  randomParametersModel.h
src/gui/ui/: meteorRadioNetworkForm.cpp  meteorRadioNetworkForm.h  meteorRadioStationForm.cpp  meteorRadioStationForm.h  meteorReportForm.cpp  meteorReportForm.h  meteor_radio_network_form.ui  meteor_radio_station_form.ui  meteor_report_form.ui
src/maths/: CMakeLists.txt  expRandomNumbGenerator.cpp  expRandomNumbGenerator.h  gaussianRandomNumbGenerator.cpp  gaussianRandomNumbGenerator.h  matrix.cpp  matrix.h  randomNumbGenerator.cpp  randomNumbGenerator.h  rayleighRandomNumbGenerator.cpp  rayleighRandomNumbGenerator.h  tableFunction.cpp  tableFunction.h  uniRandomNumbGenerator.cpp  uniRandomNumbGenerator.h  vector.cpp  vector.h
src/meteorRadioEntities/: CMakeLists.txt  message.cpp  message.h  meteorRadioEdge.cpp  meteorRadioEdge.h  meteorRadioStation.cpp  meteorRadioStation.h  meteorTraceChannel.cpp  meteorTraceChannel.h
src/meteorTraces/: meteorTraceController.cpp  meteorTraceController.h  meteorTraceGenerationFactory.cpp  meteorTraceGenerationFactory.h  meteorTraceWorker.cpp  meteorTraceWorker.h
src/radioStations/: meteorRadioController.cpp  meteorRadioController.h  meteorRadioStationsFactory.cpp  meteorRadioStationsFactory.h  meteorRadioWorker.cpp  meteorRadioWorker.h
transl/: meteor_radio.ts  meteor_radio_ru.ts
